--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CIO</title>
+    <link rel="stylesheet" href="styles/index.css" />
 </head>
 <body>
-    <input type="file" accept="image/*" id="pick" /><br />
-    <button onclick="esc()">converter</button>
-    <script src="main.js" type="module"></script>
+    <div id="inicial">
+        <div id="content">
+            <input type="file" accept="image/*" id="pick" /><br />
+            <button onclick="esc()">converter</button>
+            <script src="main.js" type="module"></script>
+        </div>
+    </div>
 </body>
 </html>
