--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <div id="inicial">
         <div id="content">
+            <h1>Conversor de Imagens Online</h1>
+            <hr />
             <input type="file" accept="image/*" id="pick" /><br />
             <button onclick="esc()">converter</button>
             <script src="main.js" type="module"></script>
